background: Allow using sliced textures

https://bugzilla.gnome.org/show_bug.cgi?id=702283